[FLINK-38887-2] Transform supports handling nested types (ARRAY, MAP, ROW, VARIANT)